--- a/views/private/editBlog.ejs
+++ b/views/private/editBlog.ejs
@@ -18,6 +18,7 @@
         <%- include("../snippets/header.ejs") %>
         <%- include("../snippets/nav.ejs") %>
         <div class="builder-layout">
+            <div></div>
             <section>
                 <button type="button" class="add-item-btn" id="add-general">
                     <h1>Allgemeine Informationen</h1>
