Fixed some more issues with the update blog endpoint Updated some styles for the blog builder

--- a/views/private/editBlog.ejs
+++ b/views/private/editBlog.ejs
@@ -55,13 +55,13 @@
                 <button type="button" class="add-item-btn" id="done">
                     <h1>Abschliessen</h1>
                 </button>
-                <button type="button" class="floating-edit-btn" id="edit-current-element" data-blog-is-new="false" data-blog-original-name="<%= title %>">
-                    <img src="/img/svg/pen.svg" alt="Bearbeiten" title="Bearbeiten" />
-                </button>
-                <button type="button" class="floating-edit-btn" id="delete-current-element">
-                    <img src="/img/svg/trash.svg" alt="Löschen" title="Löschen" />
-                </button>
             </section>
+            <button type="button" class="floating-edit-btn" id="edit-current-element" data-blog-is-new="true" data-blog-original-name="NONE">
+                <img src="/img/svg/pen.svg" alt="Bearbeiten" title="Bearbeiten" />
+            </button>
+            <button type="button" class="floating-edit-btn" id="delete-current-element">
+                <img src="/img/svg/trash.svg" alt="Löschen" title="Löschen" />
+            </button>
             <main>
                 <% 
                 const jsonBlog = JSON.parse(blog); %>
