--- a/static/css/private.css
+++ b/static/css/private.css
@@ -263,6 +263,7 @@ tr:nth-child(even) {
     height: calc(100vh - var(--header-height));
     top: var(--header-height);
     z-index: 2;
+    padding-bottom: calc(100vh - var(--header-height));
 }
 
 /* Responsive design for builder layout */
@@ -305,6 +306,7 @@ tr:nth-child(even) {
     .builder-layout > section {
         width: 100%;
         height: 35vh;
+        padding-bottom: 20px;
     }
 }
 
