--- a/src/app/components/nav-element/nav-element.html
+++ b/src/app/components/nav-element/nav-element.html
@@ -1,5 +1,5 @@
 <div class="details">
-    <p class="title">{{ title() }}</p>
+    <p class="description">{{ description() }}</p>
     <ul>
         @for (link of linkArray(); let i = $index; track link.href) {
         <li [class]="withPicture() ? 'picture' : null" (click)="link?.onClick">
