--- a/src/app/components/nav-element/nav-element.scss
+++ b/src/app/components/nav-element/nav-element.scss
@@ -8,7 +8,7 @@
     &.open {
         grid-template-rows: 40px 1fr;
 
-        & .title::after {
+        & .description::after {
             transform: rotate(-180deg);
         }
     }
@@ -43,7 +43,7 @@ img {
     margin-right: 5px;
 }
 
-.title {
+.description {
     font-size: 30px;
     font-weight: 600;
     line-height: 1.25;
@@ -78,6 +78,10 @@ img {
 }
 
 @media screen and (min-width: 1200px) {
+    .details {
+        grid-template-rows: auto 0fr;
+    }
+
     ul {
         list-style: none;
         padding: 0;
@@ -89,6 +93,10 @@ img {
         letter-spacing: 1px;
         line-height: 2;
         font-weight: 600;
+
+        & > a {
+            font-size: inherit;
+        }
     }
 
     .picture {
@@ -104,7 +112,7 @@ img {
         margin-right: 0.5vw;
     }
 
-    .title {
+    .description {
         display: none;
     }
 }
