Added the login page Added login logic Added gallery links fetching Improved some older code Added authorization logic Added style namespaces Added password recovery route Fixed navigation logic Renamed some stuff for consistency

--- a/src/app/components/nav-element/nav-element.component.html
+++ b/src/app/components/nav-element/nav-element.component.html
@@ -2,13 +2,18 @@
     <p class="description">{{ description() }}</p>
     <ul>
         @for (link of linkArray(); let i = $index; track link.href) {
-            <li [class]="withPicture() ? 'picture' : null" (click)="(link?.onClick)">
+            <li [class]="withPicture() ? 'picture' : null">
                 @if (withPicture()) {
                     <img [src]="pictureArray()[i].src" [alt]="pictureArray()[i].alt" />
                 }
+
                 @if (typeof link?.external === "boolean" && link.external) {
                     <a [href]="link.href" target="_blank" rel="noopener">{{ link.label }}</a>
-                } @else {
+                }
+                @else if (typeof link?.clickable === "boolean" && link.clickable && typeof link.onClick === "function") {
+                    <p (click)="link.onClick()">{{ link.label }}</p>
+                }
+                @else {
                     <a [routerLink]="link.href">{{ link.label }}</a>
                 }
             </li>
