--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
     <div class="navigation">
         <div class="top">
             <div class="large">
-                <a [routerLink]="becomeMemberUrl()" class="button member">Mitglied werden</a>
+                <a [routerLink]="becomeMemberUrl()" class="button member">{{ becomeMemberUrl() === "/membership" ? "Mitglied werden" : "Account"}}</a>
                 <a [routerLink]="'/donate'" class="button donate">Spenden</a>
                 <a [routerLink]="'/contact'" class="button contact">Kontakt</a>
                 <a href="{{ UNIKAT_URL }}" target="_blank" class="button shop">Shop</a>
