--- a/src/app/components/nav-element/nav-element.component.html
+++ b/src/app/components/nav-element/nav-element.component.html
@@ -9,11 +9,9 @@
 
                 @if (typeof link?.external === "boolean" && link.external) {
                     <a [href]="link.href" target="_blank" rel="noopener">{{ link.label }}</a>
-                }
-                @else if (typeof link?.clickable === "boolean" && link.clickable && typeof link.onClick === "function") {
+                } @else if (typeof link?.clickable === "boolean" && link.clickable && typeof link.onClick === "function") {
                     <p (click)="link.onClick()">{{ link.label }}</p>
-                }
-                @else {
+                } @else {
                     <a [routerLink]="link.href">{{ link.label }}</a>
                 }
             </li>
