--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -63,11 +63,11 @@
             </li>
         </ul>
         <div class="extra-buttons">
-            <a class="header-link" [routerLink]="becomeMemberUrl()">Mitglied werden</a>
+            <a class="header-link" [routerLink]="becomeMemberUrl()">{{ becomeMemberUrl() === "/membership" ? "Mitglied werden" : "Account"}}</a>
             <a class="header-link" [routerLink]="'/donate'">Spenden</a>
             <a class="header-link" [href]="UNIKAT_URL" target="_blank" rel="roopener">Shop</a>
             <div class="buttons">
-                <button type="button" class="darkmode data-tooltip uiverse" [attr.data-tooltip-content]="currentThemeMode()" id="darkmode3">
+                <button type="button" class="darkmode data-tooltip uiverse" [attr.data-tooltip-content]="currentThemeMode() === 'light' ? 'Lightmode' : 'Darkmode'" id="darkmode3" (click)="toggleTheme()">
                     <div class="darkmode-placeholder"></div>
                     <span class="invisible">Turn on Darkmode</span>
                 </button>
