--- a/src/app/components/navigation/navigation.darkmode.component.scss
+++ b/src/app/components/navigation/navigation.darkmode.component.scss
@@ -10,4 +10,8 @@
             }
         }
     }
+
+    .darkmode-placeholder {
+        background-image: url(../../../../public/svg/moon.svg);
+    }
 }
