Finished the navigation Fixed a small visual bug on the login page

--- a/src/app/components/nav-element/nav-element.component.html
+++ b/src/app/components/nav-element/nav-element.component.html
@@ -1,5 +1,5 @@
-<div class="details">
-    <p class="description">{{ description() }}</p>
+<div [class]="isOpen() ? 'details open' : 'details'">
+    <p class="description" (click)="toggleDetails()">{{ description() }}</p>
     <ul>
         @for (link of linkArray(); let i = $index; track link.href) {
             <li [class]="withPicture() ? 'picture' : null">
@@ -8,11 +8,11 @@
                 }
 
                 @if (typeof link?.external === "boolean" && link.external) {
-                    <a [href]="link.href" target="_blank" rel="noopener">{{ link.label }}</a>
+                    <a [href]="link.href" target="_blank" rel="noopener" (click)="closeDetails()">{{ link.label }}</a>
                 } @else if (typeof link?.clickable === "boolean" && link.clickable && typeof link.onClick === "function") {
                     <p (click)="link.onClick()">{{ link.label }}</p>
                 } @else {
-                    <a [routerLink]="link.href">{{ link.label }}</a>
+                    <a [routerLink]="link.href" (click)="closeDetails()">{{ link.label }}</a>
                 }
             </li>
         }
