--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -39,7 +39,7 @@ app-theme-switch {
 }
 
 .icon {
-    height: 60px;
+    height: 50px;
     aspect-ratio: 1/1;
     display: flex;
     align-items: center;
@@ -47,8 +47,13 @@ app-theme-switch {
 
     & > img {
         height: 90%;
-        max-height: 60px;
+        max-height: 50px;
         aspect-ratio: 1/1;
+        transition: all 0.1s ease;
+
+        &:hover {
+            height: 100%;
+        }
     }
 }
 
@@ -135,6 +140,7 @@ app-theme-switch {
         display: flex;
         justify-content: flex-end;
         align-items: center;
+        gap: 5px;
     }
 }
 
