Added home style namespace Added the hero section to the homepage Improved the styleNamespaceService

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,1 @@
-<p>home works!</p>
+<app-hero [title]="titleHtml" [subtitle]="subtitle" [pictureUrl]="HERO_IMAGE_URL" [pictureAlt]="HERO_IMAGE_ALT"></app-hero>
