--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,6 +3,7 @@
 @use "./colors.scss";
 @use "./global.imports.scss";
 @use "./darkmode.imports.scss";
+@use "./home.namespace.scss";
 @use "./auth.namespace.scss";
 @use "./contact.namespace.scss";
 
