--- a/views/donate.ejs
+++ b/views/donate.ejs
@@ -68,7 +68,7 @@
                             </select>
                         </div>
                         <button type="submit" id="donate-submit" class="donate-btn hero-cta">Abschicken</button>
-                        <a href="/mitglied#scrollToMembership">Mitglied werden</a>
+                        <a href="/mitglied#scrollToMembership" style="text-decoration: none;" >Oder Mitglied werden 🔗"</a>
                     </div>
                 </div>
             </form>
